--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "0.0.15",
-    "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
+    "cli-spinner": "^0.2.6",
+    "compression": "^1.7.0",
     "core-js": "^2.4.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
     "mongoose-auto-increment": "^5.0.1",
     "reflect-metadata": "^0.1.3",
+    "require-directory": "^2.1.1",
     "rxjs": "5.0.0-beta.6",
+    "serve-favicon": "^2.4.3",
+    "stoppable": "^1.0.4",
     "systemjs": "0.19.27",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.12"
@@ -36,6 +40,7 @@
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
