--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mean-seed",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "scripts": {
     "start": "grunt && concurrently \"npm run server\" ",
     "typings": "typings",
@@ -8,33 +8,31 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "angular2-in-memory-web-api": "0.0.15",
+    "@angular/common": "~4.3.4",
+    "@angular/compiler": "~4.3.4",
+    "@angular/core": "~4.3.4",
+    "@angular/forms": "~4.3.4",
+    "@angular/http": "~4.3.4",
+    "@angular/platform-browser": "~4.3.4",
+    "@angular/platform-browser-dynamic": "~4.3.4",
+    "@angular/router": "~4.3.4",
+    "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^3.3.6",
     "cli-spinner": "^0.2.6",
     "compression": "^1.7.0",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
     "mongoose-auto-increment": "^5.0.1",
     "reflect-metadata": "^0.1.3",
     "require-directory": "^2.1.1",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.4.3",
     "serve-favicon": "^2.4.3",
     "stoppable": "^1.0.4",
-    "systemjs": "0.19.27",
+    "systemjs": "0.19.40",
     "underscore": "^1.8.3",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
@@ -45,10 +43,9 @@
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
-    "grunt-ts": "^5.5.1",
+    "grunt-ts": "^6.0.0-beta.16",
     "grunt-tslint": "^3.2.1",
     "tslint": "^3.15.1",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "typescript": "^2.4.0"
   }
 }
